added lite version of app and updated both parsers